client/styles/tailwind.css
/* ... */
.stat-image.chains {
    background-image: url('assets/img/chains.png');
}
.stat-image.keyCost {
    background-image: url('assets/img/keyCost.png');
}
.stat-image.tide {
    height: 100%;
}
.stat-image.expansion {
    height: 100%;
}

.stat-value {
    font-family: Bombardier, serif;
    font-size: 1.8rem;
}

.active-player .state svg {
    color: var(--foreground);
}

.active-player:before {
    content: '▶';
    color: #009648;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
    margin-right: 2px;
}

.inactive-player:before {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
    margin-right: 2px;
}

.chat-status {
    position: absolute;
    right: 10px;
}

.inactive-house {
    opacity: 0.2;
    filter: alpha(opacity=20);
}

.unforged-key {
    opacity: 0.6;
    filter: alpha(opacity=60);
}

.squishable-card-panel {
    display: flex;
    justify-content: flex-start;
    margin-left: 5px;
    margin-right: 5px;
    min-height: 0;
    padding: 0px;
    position: relative;
}
.squishable-card-panel .card-wrapper {
    margin: 0 5px 0 0;
}
.squishable-card-panel.hand {
    background-color: rgba(0, 0, 0, 0.1);
}

.squishable-card-panel.squish .card-wrapper {
    position: absolute;
}

@layer components {
    .blocklist td {
        vertical-align: middle !important;
    }
}

